Add initial configuration and setup files for Isaac Robot System
- Introduced .dockerignore, .editorconfig, .flake8, .pre-commit-config.yaml, and .pylintrc for development environment consistency
- Created setup scripts for system installation and maintenance
- Added Dockerfile and docker-compose.yml for containerized development
- Established systemd service and timer configurations for automated maintenance tasks
- Implemented monitoring scripts for system health checks and performance metrics
- Enhanced documentation for setup, deployment, and development workflows

--- a/.gitignore
+++ b/.gitignore
@@ -29,8 +29,16 @@ build/
 log/
 .ros/
 
+# Packaging
+dist/
+*.tar.gz
+*.tar.gz.sha256
+
 # IDE
-.vscode/
+# Keep .vscode/ for shared settings, but ignore user-specific files
+.vscode/settings.json.user
+.vscode/tasks.json.user
+.vscode/launch.json.user
 .idea/
 *.swp
 *.swo
