Add graph selection and deployment tools
- Introduced a graph selection system with scripts: `select_graph.sh` and `get_graph.sh` for managing robot graph configurations.
- Updated the start script to utilize the selected graph configuration at launch.
- Added quick deployment tools: `quick_deploy.sh` and `rebuild_local.sh` for efficient code syncing and rebuilding.
- Enhanced systemd service to support graph selection via environment variable.
- Created comprehensive documentation for graph selection, deployment processes, and usage examples.
- Added tests to validate graph selection and deployment functionality.

--- a/config/systemd/isaac-robot.service
+++ b/config/systemd/isaac-robot.service
@@ -12,6 +12,8 @@ Group=nano
 Environment="ISAAC_DEV_DIR=/home/nano/src/jetson-orin-nano"
 Environment="ISAAC_INSTALL_DIR=/opt/isaac-robot"
 Environment="PYTHONPATH=/home/nano/src/jetson-orin-nano:/opt/isaac-robot"
+# Graph selection: minimal, full, or robot (can be overridden via systemd edit)
+# Environment="ROBOT_GRAPH=minimal"
 
 # Find Isaac root (dev takes precedence) and start robot
 ExecStart=/bin/bash -c 'ISAAC_ROOT=$(python3 /home/nano/src/jetson-orin-nano/scripts/utils/find_isaac_root.py 2>/dev/null || python3 /opt/isaac-robot/scripts/utils/find_isaac_root.py 2>/dev/null || echo "/opt/isaac-robot"); cd "$ISAAC_ROOT"; exec "$ISAAC_ROOT/scripts/system/start_robot.sh"'
