Add Bluetooth, WiFi, and USB-C display setup scripts and documentation
- Introduced `setup_bluetooth.sh`, `setup_wifi.sh`, and `setup_usbc_display.sh` scripts for configuring Bluetooth, WiFi with Ethernet priority, and USB-C display support respectively.
- Added quick start guides for Bluetooth, WiFi, and USB-C display setup in `QUICK_START_BLUETOOTH.md`, `QUICK_START_WIFI.md`, and `QUICK_START_USBC.md`.
- Created detailed documentation for Bluetooth and WiFi setup in `BLUETOOTH_SETUP.md` and `WIFI_SETUP.md`.
- Implemented a network status check script `check_network.sh` to monitor current network configurations and priorities.
- Developed a helper script `configure_display.sh` for quick display configuration.
- Updated `setup.sh` to integrate Bluetooth, WiFi, and USB-C display setup steps into the unified setup process.
- Enhanced `packages.yaml` to include necessary packages for Bluetooth and USB-C display support.

--- a/config/system/packages.yaml
+++ b/config/system/packages.yaml
@@ -122,6 +122,9 @@ system:
     - x11-xserver-utils
     - x11-utils
     - x11-apps
+    - xrandr
+    # DisplayLink driver for USB-C docks (optional, install separately if needed)
+    # - displaylink-driver
 
   # WiFi and networking
   networking:
@@ -129,6 +132,13 @@ system:
     - iw
     - wpasupplicant
     - network-manager-gnome
+
+  # Bluetooth
+  bluetooth:
+    - bluez
+    - bluez-tools
+    - bluetooth
+    - pulseaudio-module-bluetooth
 
   # Monitoring tools
   monitoring:
@@ -177,4 +187,3 @@ groups:
     - ros2
     - monitoring
     - networking
-
