Add ZSH setup documentation and configuration for Cursor terminal
- Created `ZSH_CURSOR_SETUP.md` to guide users on installing and configuring ZSH in Cursor.
- Updated `.vscode/settings.json` to include ZSH as a terminal profile option.
- Added `terminal_setup.md` for detailed instructions on using ZSH and troubleshooting.
- Introduced `ZSH_SETUP.md` for quick setup and verification of ZSH as the default shell.
- Enhanced documentation to streamline the process of switching between terminal profiles.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -82,6 +82,16 @@
     "PYTHONPATH": "${workspaceFolder}:${env:PYTHONPATH}"
   },
   "terminal.integrated.defaultProfile.linux": "bash",
+  "terminal.integrated.profiles.linux": {
+    "bash": {
+      "path": "/bin/bash",
+      "icon": "terminal-bash"
+    },
+    "zsh": {
+      "path": "/usr/bin/zsh",
+      "icon": "terminal"
+    }
+  },
   "terminal.integrated.cwd": "${workspaceFolder}",
 
   // Git settings
