Enhance documentation policies and add RealSense camera support
- Added comprehensive documentation policies to prevent sprawl and ensure consistency across the repository.
- Introduced new sections in `.cursorrules` for documentation location, consolidation, structure, and quick reference.
- Deleted outdated files related to build and deployment summaries to streamline documentation.
- Added RealSense camera integration in the robot graph configuration, including health monitoring and diagnostics scripts.
- Created installation and diagnostic scripts for RealSense cameras to facilitate setup and troubleshooting.
- Updated existing documentation to reflect changes and provide clear guidance on new features and configurations.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -107,5 +107,8 @@
     "**/build/**": true,
     "**/install/**": true,
     "**/log/**": true
-  }
+  },
+  "cursorpyright.analysis.autoImportCompletions": true,
+  "cursorpyright.analysis.diagnosticMode": "workspace",
+  "cursorpyright.analysis.typeCheckingMode": "basic"
 }
