Enhance setup process and VSCode configuration
- Updated `.setup_state` to reflect new system package installation steps.
- Modified `setup.sh` to upgrade pip and install a specific version of setuptools for compatibility.
- Improved VSCode settings by adding the local bin directory to the PATH for better access to user-installed packages.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,7 +78,8 @@
   // Terminal settings
   "terminal.integrated.env.linux": {
     "ISAAC_PROJECT_ROOT": "${workspaceFolder}",
-    "PYTHONPATH": "${workspaceFolder}:${env:PYTHONPATH}"
+    "PYTHONPATH": "${workspaceFolder}:${env:PYTHONPATH}",
+    "PATH": "${env:HOME}/.local/bin:${env:PATH}"
   },
   "terminal.integrated.defaultProfile.linux": "zsh",
   "terminal.integrated.profiles.linux": {
@@ -88,7 +89,8 @@
     },
     "zsh": {
       "path": "/usr/bin/zsh",
-      "icon": "terminal"
+      "icon": "terminal",
+      "args": []
     }
   },
   "terminal.integrated.cwd": "${workspaceFolder}",
