Add visualization support and documentation for ROS 2 topics
- Introduced a new `isaac-viz` service in `docker-compose.yml` for web-based visualization using rosbridge.
- Added `QUICK_START.md` and `VISUALIZATION.md` to provide comprehensive guides for visualizing ROS 2 topics with Foxglove Studio and web browsers.
- Created `VISUALIZING_TOPICS.md` to detail the process of visualizing arbitrary topics, including examples and best practices.
- Implemented `setup_rosbridge.sh` script for easy installation of the rosbridge suite.
- Added launch files `rosbridge.launch.py` and `unified_visualization.launch.py` to support multiple visualization backends.
- Enhanced `README.md` in the RealSense camera driver to include visualization instructions and links to new documentation.
- Created a layout configuration file `foxglove_layout.json` for RealSense camera visualization in Foxglove Studio.
- Updated the RealSense camera node to improve frame handling and publishing efficiency.
- Enhanced overall documentation to reflect new visualization capabilities and usage instructions.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,3 +40,21 @@ services:
     tty: true
     command: /bin/bash
 
+  isaac-viz:
+    build:
+      context: .
+      dockerfile: Dockerfile.ros2
+    container_name: isaac-viz
+    volumes:
+      - .:/workspace
+      - ~/ros2_ws:/home/nano/ros2_ws
+    environment:
+      - ROS_DOMAIN_ID=${ROS_DOMAIN_ID:-0}
+      - ROSBRIDGE_PORT=${ROSBRIDGE_PORT:-9090}
+    network_mode: host
+    stdin_open: true
+    tty: true
+    command: >
+      /bin/bash -c "source /opt/ros/humble/setup.bash &&
+      source ~/ros2_ws/install/setup.bash 2>/dev/null || true &&
+      ros2 launch isaac_robot rosbridge.launch.py"
