Add node management documentation and scripts
- Introduced `NODE_MANAGEMENT.md` and `NODE_MANAGEMENT_QUICK_REF.md` for comprehensive guidance on managing ROS 2 nodes within the Isaac robot system.
- Added a new `manage_nodes.sh` script to provide consistent tools for starting, stopping, and monitoring node runtimes based on graph configurations.
- Implemented a `start_robot.sh` script to streamline the robot system launch process with graph-based configurations.
- Created `bench_test_cameras.sh` for visualizing RealSense camera data from a MacBook, enhancing usability for remote monitoring.
- Updated existing launch files and configurations to integrate new node management features and improve overall system functionality.
- Enhanced documentation to reflect the new node management capabilities and provide clear instructions for users.

--- a/src/hardware_drivers/realsense_camera/CMakeLists.txt
+++ b/src/hardware_drivers/realsense_camera/CMakeLists.txt
@@ -12,6 +12,45 @@ find_package(ament_cmake_python REQUIRED)
 # Install Python package
 ament_python_install_package(${PROJECT_NAME})
 
+# Create entry point script for symlink installs
+# This ensures ros2 run works even with symlink installs
+install(CODE "
+  file(MAKE_DIRECTORY \"${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}\")
+  file(WRITE \"${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}/realsense_camera_node\"
+    \"#!/usr/bin/env python3\\n\"
+    \"from realsense_camera.realsense_camera_node import main\\n\"
+    \"if __name__ == '__main__':\\n\"
+    \"    main()\\n\"
+  )
+  file(CHMOD \"${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}/realsense_camera_node\"
+    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+                GROUP_READ GROUP_EXECUTE
+                WORLD_READ WORLD_EXECUTE
+  )
+")
+
+# Create entry point script for symlink installs
+# This ensures ros2 run works even with symlink installs
+install(CODE "
+  # Create lib directory if it doesn't exist
+  file(MAKE_DIRECTORY \"${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}\")
+  
+  # Create entry point script
+  file(WRITE \"${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}/realsense_camera_node\"
+    \"#!/usr/bin/env python3\\n\"
+    \"from realsense_camera.realsense_camera_node import main\\n\"
+    \"if __name__ == '__main__':\\n\"
+    \"    main()\\n\"
+  )
+  
+  # Make it executable
+  file(CHMOD \"${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}/realsense_camera_node\"
+    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+                GROUP_READ GROUP_EXECUTE
+                WORLD_READ WORLD_EXECUTE
+  )
+")
+
 # Install launch files
 install(DIRECTORY launch
   DESTINATION share/${PROJECT_NAME}/
