--- a/src/system_monitor/CMakeLists.txt
+++ b/src/system_monitor/CMakeLists.txt
@@ -13,6 +13,22 @@ find_package(rclpy REQUIRED)
 # Install Python modules
 ament_python_install_package(${PROJECT_NAME})
 
+# Create entry point script for symlink installs
+install(CODE "
+  file(MAKE_DIRECTORY \"${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}\")
+  file(WRITE \"${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}/system_monitor_node\"
+    \"#!/usr/bin/env python3\\n\"
+    \"from system_monitor.system_monitor_node import main\\n\"
+    \"if __name__ == '__main__':\\n\"
+    \"    main()\\n\"
+  )
+  file(CHMOD \"${CMAKE_INSTALL_PREFIX}/lib/${PROJECT_NAME}/system_monitor_node\"
+    PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE
+                GROUP_READ GROUP_EXECUTE
+                WORLD_READ WORLD_EXECUTE
+  )
+")
+
 # Install config files
 install(DIRECTORY config
   DESTINATION share/${PROJECT_NAME}/
