--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -52,3 +52,14 @@ repos:
       - id: bandit
         args: ['-r', '.', '-ll']
 
+  # Run unit tests (fast, no hardware required)
+  # Note: Disabled by default for speed, enable if needed
+  # - repo: local
+  #   hooks:
+  #     - id: unit-tests
+  #       name: Unit Tests
+  #       entry: bash -c './scripts/testing/run_tests.sh unit || exit 1'
+  #       language: system
+  #       pass_filenames: false
+  #       always_run: false
+  #       stages: [commit]
