--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,7 +26,9 @@ repos:
     rev: 5.12.0
     hooks:
       - id: isort
-        args: ["--profile", "black"]
+        args: ["--profile", "black", "--check-only", "--diff"]
+        # Enforce imports at top of file
+        # Groups: stdlib, third-party, local
 
   - repo: https://github.com/pycqa/flake8
     rev: 6.1.0
