Add visualization tools setup in the installation process
- Introduced a new step in `setup.sh` to install and configure visualization tools, specifically `rosbridge_suite` and `foxglove_bridge`, enhancing the system's capabilities for visualizing ROS 2 topics.
- Updated `packages.yaml` to include visualization tools in the system configuration, ensuring they are part of the installation process.
- Modified `foxglove_bridge.launch.py` to ensure proper parameter handling for the Foxglove Bridge node, improving launch flexibility and usability.

--- a/config/system/packages.yaml
+++ b/config/system/packages.yaml
@@ -71,6 +71,11 @@ system:
     - ros-humble-desktop
     - ros-dev-tools
 
+  # Visualization tools
+  visualization:
+    - ros-humble-rosbridge-suite
+    - ros-humble-foxglove-bridge
+
   # C++ development
   cpp:
     - gcc
@@ -187,3 +192,4 @@ groups:
     - ros2
     - monitoring
     - networking
+    - visualization
