Add bench test graph configuration and update management scripts
- Introduced a new `bench_test_graph.yaml` configuration for hardware validation and visualization during bench testing, including RealSense cameras and system monitoring.
- Updated `selected_graph.txt` to set the default graph to `bench_test`, enhancing the testing workflow.
- Modified `isaac` command script to support switching to the new `bench_test` graph, allowing for easy management of graph configurations.
- Enhanced `manage_nodes.sh` to dynamically select the appropriate graph configuration based on user input or the selected graph, improving usability.
- Updated documentation in `ISAAC_COMMAND.md` to include new commands and options related to the `bench_test` graph, ensuring users are informed of the latest features.
- Adjusted `start_robot.sh` to handle launching the new bench test graph, streamlining the testing process for users.

--- a/config/systemd/isaac-robot.service
+++ b/config/systemd/isaac-robot.service
@@ -16,7 +16,8 @@ Environment="PYTHONPATH=/home/nano/src/jetson-orin-nano:/opt/isaac-robot"
 # Environment="ROBOT_GRAPH=minimal"
 
 # Find Isaac root (dev takes precedence) and start robot
-ExecStart=/bin/bash -c 'ISAAC_ROOT=$(python3 /home/nano/src/jetson-orin-nano/scripts/utils/find_isaac_root.py 2>/dev/null || python3 /opt/isaac-robot/scripts/utils/find_isaac_root.py 2>/dev/null || echo "/opt/isaac-robot"); cd "$ISAAC_ROOT"; exec "$ISAAC_ROOT/scripts/system/start_robot.sh"'
+# Uses selected graph from config/robot/selected_graph.txt
+ExecStart=/bin/bash -c 'ISAAC_ROOT=$(python3 /home/nano/src/jetson-orin-nano/scripts/utils/find_isaac_root.py 2>/dev/null || python3 /opt/isaac-robot/scripts/utils/find_isaac_root.py 2>/dev/null || echo "/opt/isaac-robot"); cd "$ISAAC_ROOT"; ROBOT_GRAPH=$(python3 "$ISAAC_ROOT/scripts/utils/get_graph.sh" 2>/dev/null || echo "minimal"); exec "$ISAAC_ROOT/scripts/system/start_robot.sh"'
 
 # Restart on failure with exponential backoff
 Restart=on-failure
