Add visualization configurations and update robot graph settings
- Expanded the `config/README.md` to include a new `visualization/` directory for visualization configurations.
- Introduced multiple layout files for Foxglove Studio, including `foxglove_cameras_layout.json`, `foxglove_cameras_only_layout.json`, and `foxglove_all_camera_data.json`, enhancing visualization options for camera data.
- Updated `robot_graph.yaml` to enable pointcloud publishing and include additional camera topics for improved data visualization.
- Added helper scripts for loading camera layouts and checking pointcloud topics, streamlining the user experience.
- Enhanced documentation in `visualization/README.md` and `QUICK_START.md` to guide users on utilizing the new visualization features effectively.

--- a/config/robot/robot_graph.yaml
+++ b/config/robot/robot_graph.yaml
@@ -55,7 +55,7 @@ robot:
     parameters:
       enable_color: true
       enable_depth: true
-      enable_pointcloud: false
+      enable_pointcloud: true
       color_width: 640
       color_height: 480
       color_fps: 30
@@ -73,6 +73,8 @@ robot:
         - /camera_rear/color/camera_info
         - /camera_rear/depth/image_rect_raw
         - /camera_rear/depth/camera_info
+        - /camera_front/points
+        - /camera_rear/points
         - /realsense/status
       subscribe: []
 
