Add bench test hardware integration and verification scripts
- Introduced a new `README_BENCH_TEST.md` for quick start instructions on bench testing.
- Added comprehensive hardware verification script `verify_all_hardware.sh` to check all connected components.
- Updated `setup.sh` to include a step for hardware verification during the setup process.
- Enhanced `bench_test_graph.yaml` to include configurations for USB microphone and ODrive motor controller.
- Created new documentation files for bench test launch instructions and verification guide, ensuring users have clear guidance on hardware setup and testing procedures.
- Integrated USB microphone and ODrive motor controller into the robot graph configuration for improved functionality during bench tests.
- Updated visualization layout for Foxglove Studio to include new hardware components, enhancing monitoring capabilities.

--- a/config/robot/bench_test_graph.yaml
+++ b/config/robot/bench_test_graph.yaml
@@ -57,6 +57,65 @@ robot:
         - /realsense/status
       subscribe: []
 
+  # USB Microphone
+  usb_microphone:
+    enabled: true
+    package: usb_microphone
+    node: usb_microphone_node
+    namespace: /hardware
+    parameters:
+      device: 'default'
+      sample_rate: 16000
+      channels: 1
+      format: 'S16_LE'
+      chunk_size: 1024
+      publish_rate: 10.0
+    topics:
+      publish:
+        - /microphone/status
+      subscribe: []
+
+  # ODrive Motor Controller
+  odrive_controller:
+    enabled: true
+    package: odrive_controller
+    node: odrive_controller_node
+    namespace: /hardware
+    parameters:
+      serial_port: '/dev/ttyUSB0'
+      baudrate: 115200
+      timeout: 1.0
+      use_can: false
+      can_interface: 'can0'
+      can_node_id: 0
+      publish_rate: 50.0
+      enable_accelerometer: true
+    topics:
+      publish:
+        - /odrive/status
+        - /odrive/imu
+      subscribe:
+        - /cmd_vel
+
+  # iRobot Developer Kit Serial
+  irobot_serial:
+    enabled: true
+    package: irobot_serial
+    node: irobot_serial_node
+    namespace: /hardware
+    parameters:
+      serial_port: '/dev/ttyUSB1'
+      baudrate: 115200
+      timeout: 1.0
+      robot_type: 'create2'
+      publish_rate: 10.0
+    topics:
+      publish:
+        - /irobot/status
+        - /irobot/battery
+      subscribe:
+        - /cmd_vel
+
   # Foxglove Bridge (for visualization)
   foxglove_bridge:
     enabled: true
@@ -75,10 +134,20 @@ groups:
   bench_test:
     - system_monitor
     - realsense_camera
+    - usb_microphone
+    - odrive_controller
+    - irobot_serial
     - foxglove_bridge
 
   cameras:
     - realsense_camera
+
+  audio:
+    - usb_microphone
+
+  motors:
+    - odrive_controller
+    - irobot_serial
 
   visualization:
     - foxglove_bridge
@@ -86,4 +155,7 @@ groups:
   all:
     - system_monitor
     - realsense_camera
+    - usb_microphone
+    - odrive_controller
+    - irobot_serial
     - foxglove_bridge
